; ModuleID = '/home/carl/AnghaBench/h2o/lib/common/extr_http2client.c_close_response.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/common/extr_http2client.c_close_response.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_h2o_http2client_stream_t = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, i64 }

@STREAM_STATE_CLOSED = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.st_h2o_http2client_stream_t*)* @close_response to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @close_response(%struct.st_h2o_http2client_stream_t* %0) #0 {
  %2 = alloca %struct.st_h2o_http2client_stream_t*, align 8
  store %struct.st_h2o_http2client_stream_t* %0, %struct.st_h2o_http2client_stream_t** %2, align 8
  %3 = load %struct.st_h2o_http2client_stream_t*, %struct.st_h2o_http2client_stream_t** %2, align 8
  %4 = getelementptr inbounds %struct.st_h2o_http2client_stream_t, %struct.st_h2o_http2client_stream_t* %3, i32 0, i32 0
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @STREAM_STATE_CLOSED, align 8
  %8 = icmp ne i64 %6, %7
  %9 = zext i1 %8 to i32
  %10 = call i32 @assert(i32 %9)
  %11 = load i64, i64* @STREAM_STATE_CLOSED, align 8
  %12 = load %struct.st_h2o_http2client_stream_t*, %struct.st_h2o_http2client_stream_t** %2, align 8
  %13 = getelementptr inbounds %struct.st_h2o_http2client_stream_t, %struct.st_h2o_http2client_stream_t* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  store i64 %11, i64* %14, align 8
  %15 = load %struct.st_h2o_http2client_stream_t*, %struct.st_h2o_http2client_stream_t** %2, align 8
  %16 = getelementptr inbounds %struct.st_h2o_http2client_stream_t, %struct.st_h2o_http2client_stream_t* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 1
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* @STREAM_STATE_CLOSED, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %24

21:                                               ; preds = %1
  %22 = load %struct.st_h2o_http2client_stream_t*, %struct.st_h2o_http2client_stream_t** %2, align 8
  %23 = call i32 @close_stream(%struct.st_h2o_http2client_stream_t* %22)
  br label %24

24:                                               ; preds = %21, %1
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @close_stream(%struct.st_h2o_http2client_stream_t*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
